@@ -3,6 +3,11 @@
 
 @section v2_03_dev Changes with libapreq2-2.03-dev
 
+- C API [joes]
+  "Objectify" cookie/jar API: s/apreq_(make|serialize)_cookie/apreq_cookie_$1/
+  and reordering args so the cookie/jar object is always the first argument.
+  Macros added to provide source-compatibility with the old names.
+
 - Perl API [joes]
   Added $upload->slurp($data), which reads the contents of the file
   upload "$upload" into the scalar "$data".
